--- a/public/projectPOC/client/views/admin-profile/admin-profile.view.html
+++ b/public/projectPOC/client/views/admin-profile/admin-profile.view.html
@@ -63,7 +63,17 @@
         </table>
     </div>
 </div>
+<div style="margin-top: 25px">
+    <div
+            ng-repeat="photo in photos"
+            ng-click="detailView($index)"
+            class="col-sm-4 col-xs-6">
+        <img src={{photo.picture}} style="width:250px;height:250px;">
+        <button ng-click="deletePhoto(photo._id)"
+                class = "glyphicon glyphicon-remove"></button>
 
+    </div>
+</div>
 </body>
 </html>
 
